--- a/student-management-ng7/package.json
+++ b/student-management-ng7/package.json
@@ -21,8 +21,10 @@
     "@angular/router": "~8.2.13",
     "@types/jquery": "^3.3.32",
     "jquery": "^3.4.1",
+    "kld-intersections": "^0.6.0",
     "path-data-polyfill": "^1.0.3",
     "rxjs": "~6.4.0",
+    "svg-intersections": "^0.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
